@@ -1,3 +1,9 @@
+2013-08-20  Jason Merrill  <jason@redhat.com>
+
+	PR c++/58119
+	* cvt.c (build_expr_type_conversion): Don't complain about a
+	template that can't match the desired type category.
+
 2013-08-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* error.c (pp_ggc_formatted_text): New.
